--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,3 +6,9 @@
 */
 /* Common styles */
 @import url('./header.css');
+@import url('./hero.css');
+@import url('./assortment.css');
+@import url('./pictures.css');
+@import url('./reviews.css');
+@import url('./feedback.css');
+@import url('./footer.css');
