--- a/src/css/container.css
+++ b/src/css/container.css
@@ -6,14 +6,14 @@
 }
 
 /* Стилі для Tablet (768px - 1439px) */
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .container {
     max-width: 768px;
   }
 }
 
 /* Стилі для Desktop (1440px і більше) */
-@media (min-width: 1440px) {
+@media screen and (min-width: 1440px) {
   .container {
     max-width: 1440px;
   }
