--- a/src/partials/pictures.html
+++ b/src/partials/pictures.html
@@ -1,1 +1,6 @@
-<!--Микита Буренок-->
+<section class="gallery">
+  <div class="container">
+    <h2 class="gallery-title">Галерея зображень</h2>
+    <p class="gallery-text">EcoTotes у повсякденному житті</p>
+  </div>
+</section>
