--- a/src/partials/pictures.html
+++ b/src/partials/pictures.html
@@ -1,6 +1,31 @@
+
 <section class="gallery">
   <div class="container">
     <h2 class="gallery-title">Галерея зображень</h2>
     <p class="gallery-text">EcoTotes у повсякденному житті</p>
+    <ul class="gallery-list">
+      <li class="gallery-item">
+        <picture>
+          <source 
+            media="(max-width: 767px)"
+            srcset="/images/gallery1.webp" type="image/webp">
+          <img src="/images/gallery1.jpg" alt="EcoTotes у магазині" loading="lazy">
+      </li>
+      <li class="gallery-item">
+        <picture>
+          <source srcset="/images/gallery1.webp" type="image/webp">
+          <img src="/images/gallery1.jpg" alt="EcoTotes у магазині" loading="lazy">
+      </li>
+      <li class="gallery-item">
+        <picture>
+          <source srcset="/images/gallery1.webp" type="image/webp">
+          <img src="/images/gallery1.jpg" alt="EcoTotes у магазині" loading="lazy">
+      </li>
+      <li class="gallery-item">
+        <picture>
+          <source srcset="/images/gallery1.webp" type="image/webp">
+          <img src="/images/gallery1.jpg" alt="EcoTotes у магазині" loading="lazy">
+      </li>
+    </ul>
   </div>
 </section>
