--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,16 @@
 <!--Юлія-->
-<section>
-  <div>HEADER</div>
-</section>
+<div>
+  <div>
+    <a href="#"
+      ><svg class="" width="120" height="38">
+        <use href="/src/img/logo.svg"></use>
+      </svg>
+    </a>
+  </div>
+  <address>
+    <ul>
+      <li>+38 (099) 909 11 22</li>
+      <li>hello@ecotote.com</li>
+    </ul>
+  </address>
+</div>
