--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,16 +1,116 @@
 <!--Юлія-->
-<div>
-  <div>
-    <a href="#"
-      ><svg class="" width="120" height="38">
-        <use href="/src/img/logo.svg"></use>
-      </svg>
-    </a>
+<header class="page-header">
+  <div class="container header-container">
+    <div class="">
+      <a href="#" class="logo-link">
+        <svg class="" width="120" height="38">
+          <use href="/img/logo.svg" class="logo-svg"></use>
+        </svg>
+      </a>
+      <nav class="nav-menu">
+        <ul class="nav-list">
+          <li class="nav-item"><a class="nav-link" href="#">Про нас</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Переваги</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Асортимент</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Галерея</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Відгуки</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Контакти</a></li>
+        </ul>
+      </nav>
+    </div>
+    <address class="contacts">
+      <ul class="contacts-list">
+        <li class="contacts-item">
+          <a class="contants-link" href="tel:+380999091122"
+            >+38 (099) 909 11 22</a
+          >
+        </li>
+        <li class="contacts-item">
+          <a class="contants-link" href="#" type="emailto:" hello@ecotote.com
+            >hello@ecotote.com</a
+          >
+        </li>
+      </ul>
+    </address>
   </div>
-  <address>
-    <ul>
-      <li>+38 (099) 909 11 22</li>
-      <li>hello@ecotote.com</li>
-    </ul>
-  </address>
-</div>
+
+  <div class="mobile-menu" data-menu>
+    <div class="container mobile-menu-container">
+      <button class="mobile-menu-close" type="button" data-menu-close>
+        <svg class="mobile-menu-svg" width="8" height="8">
+          <use href="./images/icons.svg#icon-icon-close"></use>
+        </svg>
+      </button>
+      <nav class="mobile-nav">
+        <ul class="mobile-nav-list">
+          <li class="mobile-nav-item">
+            <a href="#" class="mobile-nav-link current">Studio</a>
+          </li>
+          <li class="mobile-nav-item">
+            <a href="#" class="mobile-nav-link">Portfolio</a>
+          </li>
+          <li class="mobile-nav-item">
+            <a href="#" class="mobile-nav-link">Contacts</a>
+          </li>
+          <li class="mobile-nav-item">
+            <a href="#" class="mobile-nav-link current">Studio</a>
+          </li>
+          <li class="mobile-nav-item">
+            <a href="#" class="mobile-nav-link">Portfolio</a>
+          </li>
+          <li class="mobile-nav-item">
+            <a href="#" class="mobile-nav-link">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+      <address class="mobile-address">
+        <ul class="mobile-address-list">
+          <li class="mobile-address-item">
+            <a
+              href="tel:+110001111111"
+              class="mobile-address-link mobile-contact-link"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+          <li class="mobile-address-item">
+            <a href="mailto:info@devstudio.com" class="mobile-address-link"
+              >info@devstudio.com</a
+            >
+          </li>
+        </ul>
+      </address>
+      <div class="mobile-socials">
+        <ul class="mobile-socials-list">
+          <li class="mobile-socials-item">
+            <a href="https://www.instagram.com/" class="mobile-socials-link"
+              ><svg class="mobile-socials-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mobile-socials-item">
+            <a href="https://x.com/" class="mobile-socials-link">
+              <svg class="mobile-socials-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mobile-socials-item">
+            <a href="https://www.facebook.com/" class="mobile-socials-link">
+              <svg class="mobile-socials-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mobile-socials-item">
+            <a href="https://www.linkedin.com/" class="mobile-socials-link"
+              ><svg class="mobile-socials-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</header>
