--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,1 +1,131 @@
 <!--Анна-->
+<section class="reviews">
+  <div class="container">
+    <ul>
+      <li>
+        <ul>
+          <li>
+            <svg class="" width="24" height="24">
+              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="" width="24" height="24">
+              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="" width="24" height="24">
+              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="" width="24" height="24">
+              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="" width="24" height="24">
+              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+            </svg>
+          </li>
+        </ul>
+        <p>Сумка дуже зручна та стильна, використовую щодня!</p>
+        <p>Aнна</p>
+      </li>
+      <li>
+        <ul>
+          <li>
+            <svg class="" width="24" height="24">
+              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="" width="24" height="24">
+              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="" width="24" height="24">
+              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="" width="24" height="24">
+              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="" width="24" height="24">
+              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+            </svg>
+          </li>
+        </ul>
+        <p>Відмінна якість матеріалів, приємно здивована.</p>
+        <p>Ігор</p>
+      </li>
+      <li>
+        <ul>
+          <li>
+            <svg class="" width="24" height="24">
+              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="" width="24" height="24">
+              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="" width="24" height="24">
+              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="" width="24" height="24">
+              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="" width="24" height="24">
+              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+            </svg>
+          </li>
+        </ul>
+        <p>Сумка повністю відповідає опису, рекомендую!</p>
+        <p>Олена</p>
+      </li>
+      <li>
+        <ul>
+          <li>
+            <svg class="" width="24" height="24">
+              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="" width="24" height="24">
+              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="" width="24" height="24">
+              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="" width="24" height="24">
+              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="" width="24" height="24">
+              <use href="../img/svg/icons.svg#icon-rating-star-2"></use>
+            </svg>
+          </li>
+        </ul>
+        <p>Швидка доставка та гарне обслуговування.</p>
+        <p>Сергій</p>
+      </li>
+    </ul>
+  </div>
+</section>
