--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,31 +1,31 @@
 <!--Анна-->
 <section class="reviews">
   <div class="container">
-    <ul>
-      <li>
-        <ul>
-          <li>
-            <svg class="" width="24" height="24">
+    <ul class="reviews-list">
+      <li class="reviews-list-item">
+        <ul class="stars-list">
+          <li class="stars-list-item">
+            <svg class="stars-list-item-icon" width="24" height="24">
               <use href="../img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
-          <li>
-            <svg class="" width="24" height="24">
+          <li class="stars-list-item">
+            <svg class="stars-list-item-icon" width="24" height="24">
               <use href="../img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
-          <li>
-            <svg class="" width="24" height="24">
+          <li class="stars-list-item">
+            <svg class="stars-list-item-icon" width="24" height="24">
               <use href="../img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
-          <li>
-            <svg class="" width="24" height="24">
+          <li class="stars-list-item">
+            <svg class="stars-list-item-icon" width="24" height="24">
               <use href="../img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
-          <li>
-            <svg class="" width="24" height="24">
+          <li class="stars-list-item">
+            <svg class="stars-list-item-icon" width="24" height="24">
               <use href="../img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
@@ -33,30 +33,30 @@
         <p>Сумка дуже зручна та стильна, використовую щодня!</p>
         <p>Aнна</p>
       </li>
-      <li>
-        <ul>
-          <li>
-            <svg class="" width="24" height="24">
+      <li class="reviews-list-item">
+        <ul class="stars-list">
+          <li class="stars-list-item">
+            <svg class="stars-list-item-icon" width="24" height="24">
               <use href="../img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
-          <li>
-            <svg class="" width="24" height="24">
+          <li class="stars-list-item">
+            <svg class="stars-list-item-icon" width="24" height="24">
               <use href="../img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
-          <li>
-            <svg class="" width="24" height="24">
+          <li class="stars-list-item">
+            <svg class="stars-list-item-icon" width="24" height="24">
               <use href="../img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
-          <li>
-            <svg class="" width="24" height="24">
+          <li class="stars-list-item">
+            <svg class="stars-list-item-icon" width="24" height="24">
               <use href="../img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
-          <li>
-            <svg class="" width="24" height="24">
+          <li class="stars-list-item">
+            <svg class="stars-list-item-icon" width="24" height="24">
               <use href="../img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
@@ -64,30 +64,30 @@
         <p>Відмінна якість матеріалів, приємно здивована.</p>
         <p>Ігор</p>
       </li>
-      <li>
-        <ul>
-          <li>
-            <svg class="" width="24" height="24">
+      <li class="reviews-list-item">
+        <ul class="stars-list">
+          <li class="stars-list-item">
+            <svg class="stars-list-item-icon" width="24" height="24">
               <use href="../img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
-          <li>
-            <svg class="" width="24" height="24">
+          <li class="stars-list-item">
+            <svg class="stars-list-item-icon" width="24" height="24">
               <use href="../img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
-          <li>
-            <svg class="" width="24" height="24">
+          <li class="stars-list-item">
+            <svg class="stars-list-item-icon" width="24" height="24">
               <use href="../img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
-          <li>
-            <svg class="" width="24" height="24">
+          <li class="stars-list-item">
+            <svg class="stars-list-item-icon" width="24" height="24">
               <use href="../img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
-          <li>
-            <svg class="" width="24" height="24">
+          <li class="stars-list-item">
+            <svg class="stars-list-item-icon" width="24" height="24">
               <use href="../img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
@@ -95,30 +95,30 @@
         <p>Сумка повністю відповідає опису, рекомендую!</p>
         <p>Олена</p>
       </li>
-      <li>
-        <ul>
-          <li>
-            <svg class="" width="24" height="24">
+      <li class="reviews-list-item">
+        <ul class="stars-list">
+          <li class="stars-list-item">
+            <svg class="stars-list-item-icon" width="24" height="24">
               <use href="../img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
-          <li>
-            <svg class="" width="24" height="24">
+          <li class="stars-list-item">
+            <svg class="stars-list-item-icon" width="24" height="24">
               <use href="../img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
-          <li>
-            <svg class="" width="24" height="24">
+          <li class="stars-list-item">
+            <svg class="stars-list-item-icon" width="24" height="24">
               <use href="../img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
-          <li>
-            <svg class="" width="24" height="24">
+          <li class="stars-list-item">
+            <svg class="stars-list-item-icon" width="24" height="24">
               <use href="../img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
-          <li>
-            <svg class="" width="24" height="24">
+          <li class="stars-list-item">
+            <svg class="stars-list-item-icon" width="24" height="24">
               <use href="../img/svg/icons.svg#icon-rating-star-2"></use>
             </svg>
           </li>
