--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,10 +7,11 @@
 /* Common styles */
 @import url('./header.css');
 @import url('./hero.css');
+@import url('./about.css');
 @import url('./assortment.css');
-@import url('./pictures.css');
-@import url('./reviews.css');
-@import url('./feedback.css');
+@import url('./gallery.css');
+@import url('./feedbacks.css');
+@import url('./support.css');
 @import url('./footer.css');
 @import url('./reset.css');
 @import url('./container.css');
