--- a/src/partials/assortment.html
+++ b/src/partials/assortment.html
@@ -1,1 +1,164 @@
-<!--Олександр Купшій-->
+<!-- Олександр Кушпій -->
+
+<!-- #region-four -->
+
+<section class="assortment">
+    <div class="container">
+        <h2 class="assortment-title">Наші сумки</h2>
+        <ul class="assortment-ul">
+            <li class="assortment-li">
+                <div class="assortment-img">
+                    <picture>
+                        <source media="(min-width: 1158px)"
+                            srcset="./src/img/01-desk-1x.jpg 1x, ./src/img/01-desk-2x.jpg 2x">
+                        <source media="(min-width: 768px)"
+                            srcset="./src/img/01-tab-1x.jpg 1x, ./src/img/01-tab-2x.jpg 2x">
+                        <source media="(max-width: 767px)"
+                            srcset="./src/img/01-mob-1x.jpg 1x, ./src/img/01-mob-2x.jpg 2x">
+                        <img src="./src/img/01-mob-1x.jpg" alt="EcoBag Classic" width="288">
+                    </picture>
+                </div>
+                <div class="assortment-div">
+                    <h3 class="assortment-sub">EcoBag Classic</h3>
+                    <p class="assortment-p">Елегантна та містка сумка для щоденного використання.</p>
+                    <p class="assortment-price">$25</p>
+                </div>
+                <button type="button" class="assortment-button">Купити</button>
+            </li>
+            <li class="assortment-li">
+                <div class="assortment-img">
+                    <picture>
+                        <source media="(min-width: 1158px)"
+                            srcset="./src/img/02-desk-1x.jpg 1x, ./src/img/02-desk-2x.jpg 2x">
+                        <source media="(min-width: 768px)"
+                            srcset="./src/img/02-tab-1x.jpg 1x, ./src/img/02-tab-2x.jpg 2x">
+                        <source media="(max-width: 767px)"
+                            srcset="./src/img/02-mob-1x.jpg 1x, ./src/img/02-mob-2x.jpg 2x">
+                        <img src="./src/img/02-mob-1x.jpg" alt="EcoTote Shopper" width="288">
+                    </picture>
+                </div>
+                <div class="assortment-div">
+                    <h3 class="assortment-sub">EcoTote Shopper</h3>
+                    <p class="assortment-p">Ідеальна для покупок, з посиленими ручками.</p>
+                    <p class="assortment-price">$30</p>
+                </div>
+                <button type="button" class="assortment-button">Купити</button>
+            </li>
+            <li class="assortment-li">
+                <div class="assortment-img">
+                    <picture>
+                        <source media="(min-width: 1158px)"
+                            srcset="./src/img/03-desk-1x.jpg 1x, ./src/img/03-desk-2x.jpg 2x">
+                        <source media="(min-width: 768px)"
+                            srcset="./src/img/03-tab-1x.jpg 1x, ./src/img/03-tab-2x.jpg 2x">
+                        <source media="(max-width: 767px)"
+                            srcset="./src/img/03-mob-1x.jpg 1x, ./src/img/03-mob-2x.jpg 2x">
+                        <img src="./src/img/03-mob-1x.jpg" alt="EcoBackpack Urban" width="288">
+                    </picture>
+                </div>
+                <div class="assortment-div">
+                    <h3 class="assortment-sub">EcoBackpack Urban</h3>
+                    <p class="assortment-p">Зручний рюкзак для міста з відділенням  для ноутбука.</p>
+                    <p class="assortment-price">$45</p>
+                </div>
+                <button type="button" class="assortment-button">Купити</button>
+            </li>
+            <li class="assortment-li">
+                <div class="assortment-img">
+                    <picture>
+                        <source media="(min-width: 1158px)"
+                            srcset="./src/img/04-desk-1x.jpg 1x, ./src/img/04-desk-2x.jpg 2x">
+                        <source media="(min-width: 768px)"
+                            srcset="./src/img/04-tab-1x.jpg 1x, ./src/img/04-tab-2x.jpg 2x">
+                        <source media="(max-width: 767px)"
+                            srcset="./src/img/04-mob-1x.jpg 1x, ./src/img/04-mob-2x.jpg 2x">
+                        <img src="./src/img/04-mob-1x.jpg" alt="EcoCrossbody Mini" width="288">
+                    </picture>
+                </div>
+                <div class="assortment-div">
+                    <h3 class="assortment-sub">EcoCrossbody Mini</h3>
+                    <p class="assortment-p">Компактна сумка через плече для найнеобхіднішого.</p>
+                    <p class="assortment-price">$20</p>
+                </div>
+                <button type="button" class="assortment-button">Купити</button>
+            </li>
+            <li class="assortment-li">
+                <div class="assortment-img">
+                    <picture>
+                        <source media="(min-width: 1158px)"
+                            srcset="./src/img/05-desk-1x.jpg 1x, ./src/img/05-desk-2x.jpg 2x">
+                        <source media="(min-width: 768px)"
+                            srcset="./src/img/05-tab-1x.jpg 1x, ./src/img/05-tab-2x.jpg 2x">
+                        <source media="(max-width: 767px)"
+                            srcset="./src/img/05-mob-1x.jpg 1x, ./src/img/05-mob-2x.jpg 2x">
+                        <img src="./src/img/05-mob-1x.jpg" alt="EcoLunch Bag" width="288">
+                    </picture>
+                </div>
+                <div class="assortment-div">
+                    <h3 class="assortment-sub">EcoLunch Bag</h3>
+                    <p class="assortment-p">Стильна та практична сумка для обідів.</p>
+                    <p class="assortment-price">$15</p>
+                </div>
+                <button type="button" class="assortment-button">Купити</button>
+            </li>
+            <li class="assortment-li">
+                <div class="assortment-img">
+                    <picture>
+                        <source media="(min-width: 1158px)"
+                            srcset="./src/img/06-desk-1x.jpg 1x, ./src/img/06-desk-2x.jpg 2x">
+                        <source media="(min-width: 768px)"
+                            srcset="./src/img/06-tab-1x.jpg 1x, ./src/img/06-tab-2x.jpg 2x">
+                        <source media="(max-width: 767px)"
+                            srcset="./src/img/06-mob-1x.jpg 1x, ./src/img/06-mob-2x.jpg 2x">
+                        <img src="./src/img/06-mob-1x.jpg" alt="EcoBeach Tote" width="288">
+                    </picture>
+                </div>
+                <div class="assortment-div">
+                    <h3 class="assortment-sub">EcoBeach Tote</h3>
+                    <p class="assortment-p">Велика сумка для пляжних речей з водонепроникною підкладкою.</p>
+                    <p class="assortment-price">$35</p>
+                </div>
+                <button type="button" class="assortment-button">Купити</button>
+            </li>
+            <li class="assortment-li">
+                <div class="assortment-img">
+                    <picture>
+                        <source media="(min-width: 1158px)"
+                            srcset="./src/img/07-desk-1x.jpg 1x, ./src/img/07-desk-2x.jpg 2x">
+                        <source media="(min-width: 768px)"
+                            srcset="./src/img/07-tab-1x.jpg 1x, ./src/img/07-tab-2x.jpg 2x">
+                        <source media="(max-width: 767px)"
+                            srcset="./src/img/07-mob-1x.jpg 1x, ./src/img/07-mob-2x.jpg 2x">
+                        <img src="./src/img/07-mob-1x.jpg" alt="EcoTravel Duffle" width="288">
+                    </picture>
+                </div>
+                <div class="assortment-div">
+                    <h3 class="assortment-sub">EcoTravel Duffle</h3>
+                    <p class="assortment-p">Містка дорожня сумка з додатковими кишенями.</p>
+                    <p class="assortment-price">$60</p>
+                </div>
+                <button type="button" class="assortment-button">Купити</button>
+            </li>
+            <li class="assortment-li">
+                <div class="assortment-img">
+                    <picture>
+                        <source media="(min-width: 1158px)"
+                            srcset="./src/img/08-desk-1x.jpg 1x, ./src/img/08-desk-2x.jpg 2x">
+                        <source media="(min-width: 768px)"
+                            srcset="./src/img/08-tab-1x.jpg 1x, ./src/img/08-tab-2x.jpg 2x">
+                        <source media="(max-width: 767px)"
+                            srcset="./src/img/08-mob-1x.jpg 1x, ./src/img/08-mob-2x.jpg 2x">
+                        <img src="./src/img/08-mob-1x.jpg" alt="EcoKids Bag" width="288">
+                    </picture>
+                </div>
+                <div class="assortment-div">
+                    <h3 class="assortment-sub">EcoKids Bag</h3>
+                    <p class="assortment-p">Яскрава та зручна сумка для дітей.</p>
+                    <p class="assortment-price">$22</p>
+                </div>
+                <button type="button" class="assortment-button">Купити</button>
+            </li>
+        </ul>
+    </div>
+</section>
+<!-- #endregion assortment -->
