--- a/src/css/header.css
+++ b/src/css/header.css
@@ -2,20 +2,127 @@
   display: none;
 }
 
+a {
+  font-style: normal;
+}
+
 .page-header {
   background-color: #75d281;
 }
 
-.burger-btn {
+.logo-link {
+  display: block;
+  padding: 14px 0;
+}
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.nav-list,
+.contacts {
   display: none;
 }
 
-@media screen and (min-width: 1440px) {
-  .container {
-    padding-left: 64px;
-    padding-right: 64px;
-  }
+.burger-btn {
+  display: block;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
 
+.burger-icon {
+  fill: #030a06;
+}
+
+/* #region mobile-menu */
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #75d281;
+
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.mobile-menu-container {
+  position: relative;
+  padding-top: 14px;
+  padding-right: 20px;
+  padding-left: 20px;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.mobile-menu-close {
+  position: absolute;
+  top: 8px;
+  right: 12px;
+  width: 48px;
+  height: 48px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu-svg {
+  display: block;
+  fill: #030a06;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-nav,
+.mobile-address {
+  margin-bottom: auto;
+}
+
+.mobile-nav {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+.mobile-nav-list {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+
+.mobile-nav-item {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.16;
+  /* letter-spacing: 0.02em; */
+  color: #030a06;
+}
+
+/* #endregion mobile-menu */
+
+@media screen and (min-width: 768px) {
+}
+
+@media screen and (min-width: 1440px) {
   .header-container {
     display: flex;
     justify-content: space-between;
@@ -36,21 +143,22 @@
   .nav-list {
     display: flex;
     align-items: center;
-    gap: 32px;
+  }
+
+  .nav-link {
+    padding: 16px;
   }
 
   .nav-item {
-    padding-top: 23px;
-    padding-bottom: 23px;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.6;
     color: #030a06;
   }
 
-  .contacts {
+  /* .contacts {
     font-style: normal;
-  }
+  } */
 
   .contacts-list {
     display: flex;
