--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -29,14 +29,14 @@
       </ul>
     </address>
 
-    <button class="burger-btn hidden" data-menu-open>
+    <button type="submit" class="burger-btn hidden" data-menu-open>
       <svg class="burger-icon" width="16" height="12">
-        <use href="/img/icons.svg#icon-menu"></use>
+        <use href="/img/svg/icons.svg#icon-menu"></use>
       </svg>
     </button>
   </div>
 
-  <div class="mobile-menu hidden" data-menu>
+  <div class="mobile-menu is-open" data-menu>
     <div class="container mobile-menu-container">
       <div class="mob-logo">
         <a href="#" class="logo-link">
@@ -46,7 +46,7 @@
       <div class="mob-btn">
         <button class="mobile-menu-close" type="button" data-menu-close>
           <svg class="mobile-menu-svg" width="15" height="15">
-            <use href="./img/icons.svg#icon-close"></use>
+            <use href="./img/svg/icons.svg#icon-close"></use>
           </svg>
         </button>
       </div>
