--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -21,7 +21,7 @@
 color: #030a06;
 letter-spacing: 0.01em;
 text-align: center;
-font-weight: 700;
+font-weight: 700git ;
 font-size: 36px;
 line-height: 36px;
 font-family: "Comfortaa",
