--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,31 +5,43 @@
       <a href="/index.html" class="logo-link">
         <img src="/img/logo.svg" width="80" height="30" />
       </a>
-      <ul class="nav-list">
-        <li class="nav-item"><a class="nav-link" href="#">Про нас</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Переваги</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Асортимент</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Галерея</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Відгуки</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Контакти</a></li>
+      <ul class="nav-list d-none">
+        <li class="nav-item">
+          <a class="nav-link" href="#about">Про нас</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#hero">Переваги</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#assortement">Асортимент</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#gallery">Галерея</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#reviews">Відгуки</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#support">Контакти</a>
+        </li>
       </ul>
     </nav>
-    <address class="contacts">
+    <address class="contacts d-none">
       <ul class="contacts-list">
         <li class="contacts-item">
-          <a class="contants-link" href="tel:+380999091122"
+          <a class="contacts-link" href="tel:+380999091122"
             >+38 (099) 909 11 22</a
           >
         </li>
         <li class="contacts-item">
-          <a class="contants-link" href="#" type="emailto:" hello@ecotote.com
+          <a class="contacts-link" href="#" type="emailto:" hello@ecotote.com
             >hello@ecotote.com</a
           >
         </li>
       </ul>
     </address>
 
-    <button type="submit" class="burger-btn hidden" data-menu-open>
+    <button type="submit" class="burger-btn" data-menu-open>
       <svg class="burger-icon" width="16" height="12">
         <use href="/img/svg/icons.svg#icon-menu"></use>
       </svg>
@@ -37,9 +49,9 @@
   </div>
 
   <div class="mobile-menu is-open" data-menu>
-    <div class="container mobile-menu-container">
+    <div class="mobile-menu-container">
       <div class="mob-logo">
-        <a href="#" class="logo-link">
+        <a href="/index.html" class="logo-link">
           <img src="/img/logo.svg" width="80" height="30" />
         </a>
       </div>
@@ -53,22 +65,22 @@
       <nav class="mobile-nav">
         <ul class="mobile-nav-list">
           <li class="mobile-nav-item">
-            <a href="#" class="mobile-nav-link current">Про нас</a>
+            <a href="#about" class="mobile-nav-link current">Про нас</a>
           </li>
           <li class="mobile-nav-item">
-            <a href="#" class="mobile-nav-link">Переваги</a>
+            <a href="#hero" class="mobile-nav-link">Переваги</a>
           </li>
           <li class="mobile-nav-item">
-            <a href="#" class="mobile-nav-link">Асортимент</a>
+            <a href="#assortement" class="mobile-nav-link">Асортимент</a>
           </li>
           <li class="mobile-nav-item">
-            <a href="#" class="mobile-nav-link current">Галерея</a>
+            <a href="#gallery" class="mobile-nav-link current">Галерея</a>
           </li>
           <li class="mobile-nav-item">
-            <a href="#" class="mobile-nav-link">Відгуки</a>
+            <a href="#reviews" class="mobile-nav-link">Відгуки</a>
           </li>
           <li class="mobile-nav-item">
-            <a href="#" class="mobile-nav-link">Контакти</a>
+            <a href="#support" class="mobile-nav-link">Контакти</a>
           </li>
         </ul>
       </nav>
