--- a/src/css/header.css
+++ b/src/css/header.css
@@ -10,7 +10,7 @@ a {
   background-color: #75d281;
 }
 
-.logo-link {
+.header-nav .logo-link {
   display: block;
   padding: 14px 0;
 }
@@ -20,8 +20,7 @@ a {
   justify-content: space-between;
 }
 
-.nav-list,
-.contacts {
+.d-none {
   display: none;
 }
 
@@ -113,13 +112,22 @@ a {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.16;
-  /* letter-spacing: 0.02em; */
   color: #030a06;
+}
+
+.mobile-address-list {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
 
 /* #endregion mobile-menu */
 
 @media screen and (min-width: 768px) {
+  .mobile-menu-container {
+    padding-right: 32px;
+    padding-left: 32px;
+  }
 }
 
 @media screen and (min-width: 1440px) {
@@ -132,40 +140,57 @@ a {
   .header-nav {
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    border-bottom: none;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      border-bottom 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
-  .logo-link {
+  .header-nav .nav-link {
+    padding: 16px;
+  }
+
+  .header-nav .nav-list .nav-link:hover {
+    border-bottom: 1px solid #030a06;
+  }
+
+  .header-nav .nav-list .nav-link:active {
+    color: #3ac04c;
+    border-bottom: 1px solid #3ac04c;
+  }
+
+  .page-header .contacts .contacts-list .contacts-link:active {
+    color: #3ac04c;
+  }
+
+  .header-nav .logo-link {
     margin-right: 175px;
-    padding-top: 13px;
-    padding-bottom: 13px;
   }
 
-  .nav-list {
+  .header-nav .nav-list {
     display: flex;
     align-items: center;
   }
 
-  .nav-link {
-    padding: 16px;
-  }
-
-  .nav-item {
+  .header-nav .nav-item {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.6;
     color: #030a06;
   }
 
-  /* .contacts {
+  .page-header .contacts {
+    display: block;
     font-style: normal;
-  } */
+  }
 
-  .contacts-list {
+  .page-header .contacts-list {
     display: flex;
     flex-direction: row;
     gap: 16px;
   }
 
+  .burger-btn,
   .mobile-menu {
     display: none;
   }
