--- a/src/css/header.css
+++ b/src/css/header.css
@@ -121,6 +121,10 @@ a {
   gap: 16px;
 }
 
+.page-header .contacts .contacts-item {
+  margin: 0;
+}
+
 /* #endregion mobile-menu */
 
 @media screen and (min-width: 768px) {
