Images to folder and path

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,1 +1,121 @@
-<!--Микита Буренок-->
+<section class="section-advantages">
+  <div class="container container-advantages">
+    <h3 class="subtitle">Переваги</h3>
+    <h2 class="title-advantages">Чому обрати нас?</h2>
+    <p class="advantages-text">
+      Наші сумки виготовлені з екологічно чистих матеріалів, що забезпечують
+      стійкість і довговічність. Обираючи EcoTote, ви підтримуєте екологічну
+      відповідальність.
+    </p>
+    <ul class="list-section-advantages">
+      <li class="list-advantages-item">
+        <picture>
+          <source
+            media="(min-width: 1440px)"
+            srcset="
+              ./img/advantages/organic-d.jpg   1x,
+              ./img/advantages/organic-d@2.jpg 2x
+            "
+          />
+          <source
+            media="(min-width: 768px)"
+            srcset="
+              ./img/advantages/organic-t.jpg   1x,
+              ./img/advantages/organic-t@2.jpg 2x
+            "
+          />
+          <source
+            media="(min-width: 320px)"
+            srcset="
+              ./img/advantages/organic-m.jpg   1x,
+              ./img/advantages/organic-m@2.jpg 2x
+            "
+          />
+          <img
+            class="advantages-picture"
+            src="./img/advantages/organic-m"
+            alt="natural materials"
+            width="288"
+            height="198"
+          />
+        </picture>
+        <h4 class="subtitle-advantages">Стійкість та екологічність</h4>
+        <p class="subtitle-advantages-text">
+          Виготовлені з органічної бавовни та переробленого пластику.
+        </p>
+      </li>
+      <li class="list-advantages-item">
+        <picture>
+          <source
+            media="(min-width: 1440px)"
+            srcset="
+              ./img/advantages/strength-d.jpg   1x,
+              ./img/advantages/strength-d@2.jpg 2x
+            "
+          />
+          <source
+            media="(min-width: 768px)"
+            srcset="
+              ./img/advantages/strength-t.jpg   1x,
+              ./img/advantages/strength-t@2.jpg 2x
+            "
+          />
+          <source
+            media="(min-width: 320px)"
+            srcset="
+              ./img/advantages/strength-m.jpg   1x,
+              ./img/advantages/strength-m@2.jpg 2x
+            "
+          />
+          <img
+            class="advantages-picture"
+            src="./img/advantages/strength-m"
+            alt="hands of a craftsman working on creating a bag"
+            width="288"
+            height="198"
+          />
+        </picture>
+        <h4 class="subtitle-advantages">Міцність і довговічність</h4>
+        <p class="subtitle-advantages-text">
+          Наші сумки мають посилені шви для тривалого використання.
+        </p>
+      </li>
+      <li class="list-advantages-item">
+        <picture>
+          <source
+            media="(min-width: 1440px)"
+            srcset="
+              ./img/advantages/modern-style-d.jpg   1x,
+              ./img/advantages/modern-style-d@2.jpg 2x
+            "
+          />
+          <source
+            media="(min-width: 768px)"
+            srcset="
+              ./img/advantages/modern-style-t.jpg   1x,
+              ./img/advantages/modern-style-t@2.jpg 2x
+            "
+          />
+          <source
+            media="(min-width: 320px)"
+            srcset="
+              ./img/advantages/modern-style-m.jpg   1x,
+              ./img/advantages/modern-style-m@2.jpg 2x
+            "
+          />
+          <img
+            class="advantages-picture"
+            src="./img/advantages/modern-style-m"
+            alt="three bags"
+            width="288"
+            height="198"
+          />
+        </picture>
+        <h4 class="subtitle-advantages">Стильний та сучасний дизайн</h4>
+        <p class="subtitle-advantages-text">
+          Мінімалістичні моделі в обмежених серіях для кожного стилю.
+        </p>
+      </li>
+    </ul>
+  </div>
+</section>
