Images to folder and path

--- a/src/partials/assortment.html
+++ b/src/partials/assortment.html
@@ -10,12 +10,12 @@
                 <div class="assortment-img">
                     <picture>
                         <source media="(min-width: 1158px)"
-                            srcset="./src/img/01-desk-1x.jpg 1x, ./src/img/01-desk-2x.jpg 2x">
+                            srcset="./img/assortment/01-desk-1x.jpg 1x, ./img/assortment/01-desk-2x.jpg 2x">
                         <source media="(min-width: 768px)"
-                            srcset="./src/img/01-tab-1x.jpg 1x, ./src/img/01-tab-2x.jpg 2x">
+                            srcset="./img/assortment/01-tab-1x.jpg 1x, ./img/assortment/01-tab-2x.jpg 2x">
                         <source media="(max-width: 767px)"
-                            srcset="./src/img/01-mob-1x.jpg 1x, ./src/img/01-mob-2x.jpg 2x">
-                        <img src="./src/img/01-mob-1x.jpg" alt="EcoBag Classic" width="288">
+                            srcset="./img/assortment/01-mob-1x.jpg 1x, ./img/assortment/01-mob-2x.jpg 2x">
+                        <img src="./img/assortment/01-mob-1x.jpg" alt="EcoBag Classic" width="288">
                     </picture>
                 </div>
                 <div class="assortment-div">
@@ -29,12 +29,12 @@
                 <div class="assortment-img">
                     <picture>
                         <source media="(min-width: 1158px)"
-                            srcset="./src/img/02-desk-1x.jpg 1x, ./src/img/02-desk-2x.jpg 2x">
+                            srcset="./img/assortment/02-desk-1x.jpg 1x, ./img/assortment/02-desk-2x.jpg 2x">
                         <source media="(min-width: 768px)"
-                            srcset="./src/img/02-tab-1x.jpg 1x, ./src/img/02-tab-2x.jpg 2x">
+                            srcset="./img/assortment/02-tab-1x.jpg 1x, ./img/assortment/02-tab-2x.jpg 2x">
                         <source media="(max-width: 767px)"
-                            srcset="./src/img/02-mob-1x.jpg 1x, ./src/img/02-mob-2x.jpg 2x">
-                        <img src="./src/img/02-mob-1x.jpg" alt="EcoTote Shopper" width="288">
+                            srcset="./img/assortment/02-mob-1x.jpg 1x, ./img/assortment/02-mob-2x.jpg 2x">
+                        <img src="./img/assortment/02-mob-1x.jpg" alt="EcoTote Shopper" width="288">
                     </picture>
                 </div>
                 <div class="assortment-div">
@@ -48,12 +48,12 @@
                 <div class="assortment-img">
                     <picture>
                         <source media="(min-width: 1158px)"
-                            srcset="./src/img/03-desk-1x.jpg 1x, ./src/img/03-desk-2x.jpg 2x">
+                            srcset="./img/assortment/03-desk-1x.jpg 1x, ./img/assortment/03-desk-2x.jpg 2x">
                         <source media="(min-width: 768px)"
-                            srcset="./src/img/03-tab-1x.jpg 1x, ./src/img/03-tab-2x.jpg 2x">
+                            srcset="./img/assortment/03-tab-1x.jpg 1x, ./img/assortment/03-tab-2x.jpg 2x">
                         <source media="(max-width: 767px)"
-                            srcset="./src/img/03-mob-1x.jpg 1x, ./src/img/03-mob-2x.jpg 2x">
-                        <img src="./src/img/03-mob-1x.jpg" alt="EcoBackpack Urban" width="288">
+                            srcset="./img/assortment/03-mob-1x.jpg 1x, ./img/assortment/03-mob-2x.jpg 2x">
+                        <img src="./img/assortment/03-mob-1x.jpg" alt="EcoBackpack Urban" width="288">
                     </picture>
                 </div>
                 <div class="assortment-div">
@@ -67,12 +67,12 @@
                 <div class="assortment-img">
                     <picture>
                         <source media="(min-width: 1158px)"
-                            srcset="./src/img/04-desk-1x.jpg 1x, ./src/img/04-desk-2x.jpg 2x">
+                            srcset="./img/assortment/04-desk-1x.jpg 1x, ./img/assortment/04-desk-2x.jpg 2x">
                         <source media="(min-width: 768px)"
-                            srcset="./src/img/04-tab-1x.jpg 1x, ./src/img/04-tab-2x.jpg 2x">
+                            srcset="./img/assortment/04-tab-1x.jpg 1x, ./img/assortment/04-tab-2x.jpg 2x">
                         <source media="(max-width: 767px)"
-                            srcset="./src/img/04-mob-1x.jpg 1x, ./src/img/04-mob-2x.jpg 2x">
-                        <img src="./src/img/04-mob-1x.jpg" alt="EcoCrossbody Mini" width="288">
+                            srcset="./img/assortment/04-mob-1x.jpg 1x, ./img/assortment/04-mob-2x.jpg 2x">
+                        <img src="./img/assortment/04-mob-1x.jpg" alt="EcoCrossbody Mini" width="288">
                     </picture>
                 </div>
                 <div class="assortment-div">
@@ -86,12 +86,12 @@
                 <div class="assortment-img">
                     <picture>
                         <source media="(min-width: 1158px)"
-                            srcset="./src/img/05-desk-1x.jpg 1x, ./src/img/05-desk-2x.jpg 2x">
+                            srcset="./img/assortment/05-desk-1x.jpg 1x, ./img/assortment/05-desk-2x.jpg 2x">
                         <source media="(min-width: 768px)"
-                            srcset="./src/img/05-tab-1x.jpg 1x, ./src/img/05-tab-2x.jpg 2x">
+                            srcset="./img/assortment/05-tab-1x.jpg 1x, ./img/assortment/05-tab-2x.jpg 2x">
                         <source media="(max-width: 767px)"
-                            srcset="./src/img/05-mob-1x.jpg 1x, ./src/img/05-mob-2x.jpg 2x">
-                        <img src="./src/img/05-mob-1x.jpg" alt="EcoLunch Bag" width="288">
+                            srcset="./img/assortment/05-mob-1x.jpg 1x, ./img/assortment/05-mob-2x.jpg 2x">
+                        <img src="./img/assortment/05-mob-1x.jpg" alt="EcoLunch Bag" width="288">
                     </picture>
                 </div>
                 <div class="assortment-div">
@@ -105,12 +105,12 @@
                 <div class="assortment-img">
                     <picture>
                         <source media="(min-width: 1158px)"
-                            srcset="./src/img/06-desk-1x.jpg 1x, ./src/img/06-desk-2x.jpg 2x">
+                            srcset="./img/assortment/06-desk-1x.jpg 1x, ./img/assortment/06-desk-2x.jpg 2x">
                         <source media="(min-width: 768px)"
-                            srcset="./src/img/06-tab-1x.jpg 1x, ./src/img/06-tab-2x.jpg 2x">
+                            srcset="./img/assortment/06-tab-1x.jpg 1x, ./img/assortment/06-tab-2x.jpg 2x">
                         <source media="(max-width: 767px)"
-                            srcset="./src/img/06-mob-1x.jpg 1x, ./src/img/06-mob-2x.jpg 2x">
-                        <img src="./src/img/06-mob-1x.jpg" alt="EcoBeach Tote" width="288">
+                            srcset="./img/assortment/06-mob-1x.jpg 1x, ./img/assortment/06-mob-2x.jpg 2x">
+                        <img src="./img/assortment/06-mob-1x.jpg" alt="EcoBeach Tote" width="288">
                     </picture>
                 </div>
                 <div class="assortment-div">
@@ -124,12 +124,12 @@
                 <div class="assortment-img">
                     <picture>
                         <source media="(min-width: 1158px)"
-                            srcset="./src/img/07-desk-1x.jpg 1x, ./src/img/07-desk-2x.jpg 2x">
+                            srcset="./img/assortment/07-desk-1x.jpg 1x, ./img/assortment/07-desk-2x.jpg 2x">
                         <source media="(min-width: 768px)"
-                            srcset="./src/img/07-tab-1x.jpg 1x, ./src/img/07-tab-2x.jpg 2x">
+                            srcset="./img/assortment/07-tab-1x.jpg 1x, ./img/assortment/07-tab-2x.jpg 2x">
                         <source media="(max-width: 767px)"
-                            srcset="./src/img/07-mob-1x.jpg 1x, ./src/img/07-mob-2x.jpg 2x">
-                        <img src="./src/img/07-mob-1x.jpg" alt="EcoTravel Duffle" width="288">
+                            srcset="./img/assortment/07-mob-1x.jpg 1x, ./img/assortment/07-mob-2x.jpg 2x">
+                        <img src="./img/assortment/07-mob-1x.jpg" alt="EcoTravel Duffle" width="288">
                     </picture>
                 </div>
                 <div class="assortment-div">
@@ -143,12 +143,12 @@
                 <div class="assortment-img">
                     <picture>
                         <source media="(min-width: 1158px)"
-                            srcset="./src/img/08-desk-1x.jpg 1x, ./src/img/08-desk-2x.jpg 2x">
+                            srcset="./img/assortment/08-desk-1x.jpg 1x, ./img/assortment/08-desk-2x.jpg 2x">
                         <source media="(min-width: 768px)"
-                            srcset="./src/img/08-tab-1x.jpg 1x, ./src/img/08-tab-2x.jpg 2x">
+                            srcset="./img/assortment/08-tab-1x.jpg 1x, ./img/assortment/08-tab-2x.jpg 2x">
                         <source media="(max-width: 767px)"
-                            srcset="./src/img/08-mob-1x.jpg 1x, ./src/img/08-mob-2x.jpg 2x">
-                        <img src="./src/img/08-mob-1x.jpg" alt="EcoKids Bag" width="288">
+                            srcset="./img/assortment/08-mob-1x.jpg 1x, ./img/assortment/08-mob-2x.jpg 2x">
+                        <img src="./img/assortment/08-mob-1x.jpg" alt="EcoKids Bag" width="288">
                     </picture>
                 </div>
                 <div class="assortment-div">
@@ -161,4 +161,5 @@
         </ul>
     </div>
 </section>
+
 <!-- #endregion assortment -->
