--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -36,7 +36,7 @@
     </button>
   </div>
 
-  <div class="mobile-menu is-open" data-menu>
+  <div class="mobile-menu" data-menu>
     <div class="container mobile-menu-container">
       <div class="mob-logo">
         <a href="#" class="logo-link">
