--- a/src/partials/support.html
+++ b/src/partials/support.html
@@ -4,7 +4,7 @@
     <h2 class="support-title">Залишились питання? Зв'яжіться з нами!</h2>
     <h3 class="support-subtitle">Ми тут, щоб допомогти!</h3>
 
-    <form>
+    <form class="support-form">
       <div class="form-group">
         <label class="form-label" for="name">Ім'я</label>
         <input
@@ -34,8 +34,9 @@
           placeholder="Введіть своє повідомлення..."
         ></textarea>
       </div>
+      <button class="btn btn-submit" type="submit">Ніслати</button>
     </form>
-    <button class="btn btn-submit" type="submit">Надіслати</button>
+
     <div class="support-img"></div>
   </div>
 </section>
