--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,4 +1,4 @@
-<section class="section-advantages" id="hero">
+<section class="section-advantages">
   <div class="container container-advantages">
     <h3 class="subtitle">Переваги</h3>
     <h2 class="title-advantages">Чому обрати нас?</h2>
@@ -39,6 +39,7 @@
             height="198"
           />
         </picture>
+
         <h4 class="subtitle-advantages">Стійкість та екологічність</h4>
         <p class="subtitle-advantages-text">
           Виготовлені з органічної бавовни та переробленого пластику.
@@ -75,6 +76,7 @@
             height="198"
           />
         </picture>
+
         <h4 class="subtitle-advantages">Міцність і довговічність</h4>
         <p class="subtitle-advantages-text">
           Наші сумки мають посилені шви для тривалого використання.
@@ -111,6 +113,7 @@
             height="198"
           />
         </picture>
+
         <h4 class="subtitle-advantages">Стильний та сучасний дизайн</h4>
         <p class="subtitle-advantages-text">
           Мінімалістичні моделі в обмежених серіях для кожного стилю.
