--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -26,7 +26,7 @@
         </li>
       </ul>
     </nav>
-    <address class="contacts d-none">
+    <address class="header-contacts d-none">
       <ul class="contacts-list">
         <li class="contacts-item">
           <a class="contacts-link" href="tel:+380999091122"
