--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,7 +1,3 @@
-.hidden {
-  display: none;
-}
-
 a {
   font-style: normal;
 }
@@ -121,7 +117,7 @@ a {
   gap: 16px;
 }
 
-.page-header .contacts .contacts-item {
+.page-header .header-contacts .contacts-item {
   margin: 0;
 }
 
@@ -163,7 +159,7 @@ a {
     border-bottom: 1px solid #3ac04c;
   }
 
-  .page-header .contacts .contacts-list .contacts-link:active {
+  .page-header .header-contacts .contacts-list .contacts-link:active {
     color: #3ac04c;
   }
 
@@ -183,7 +179,7 @@ a {
     color: #030a06;
   }
 
-  .page-header .contacts {
+  .page-header .header-contacts {
     display: block;
     font-style: normal;
   }
