--- a/src/css/advantages.css
+++ b/src/css/advantages.css
@@ -1,12 +1,13 @@
 .section-advantages {
     padding: 32px 0;
-    text-align: center;
     background: #ebf8ed;
 }
 
 .container-advantages {
     width: 100%;
     margin: 0 auto;
+    text-align: center;
+    max-width: 320px;
 }
 
 .subtitle {
@@ -25,7 +26,6 @@
     line-height: 1.2;
     letter-spacing: 0.01em;
     color: #030a06;
-    align-items: center;
     margin-bottom: 20px;
 }
 
@@ -35,19 +35,23 @@
     font-size: 16px;
     line-height: 1.6;
     color: #030a06;
-    margin-bottom: 48px;
 }
 
 .list-section-advantages {
-    padding: 0;
-    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 48px;
+    margin: 0 auto;
 }
 
 .list-advantages-item {
-    gap: 48px;
+    display: block;
+    max-width: 288px;
+    text-align: center;
 }
 
-.advantages-picture {
+.list-advantages-item picture {
     display: block;
     border-radius: 32px;
     width: 100%;
@@ -63,6 +67,7 @@
     letter-spacing: 0.01em;
     color: #030a06;
     margin-bottom: 8px;
+    text-align: left;
 }
 
 .subtitle-advantages-text {
@@ -71,4 +76,5 @@
     font-size: 16px;
     line-height: 1.6;
     color: #030a06;
+    text-align: left;
 }
