--- a/src/css/header.css
+++ b/src/css/header.css
@@ -10,6 +10,7 @@ a {
   display: block;
   padding: 14px 0;
 }
+
 .header-container {
   display: flex;
   align-items: center;
@@ -18,6 +19,12 @@ a {
 
 .d-none {
   display: none;
+}
+
+.header-nav .logo-link img {
+  width: 84px;
+  height: 36px;
+  display: block;
 }
 
 .burger-btn {
@@ -64,6 +71,10 @@ a {
   height: 100%;
 }
 
+.mob-logo {
+  padding-bottom: 14px;
+}
+
 .mobile-menu-close {
   position: absolute;
   top: 8px;
@@ -88,20 +99,22 @@ a {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.mobile-nav,
-.mobile-address {
-  margin-bottom: auto;
-}
-
 .mobile-nav {
   padding-top: 32px;
   padding-bottom: 32px;
+  margin-bottom: 32px;
+}
+
+.mobile-address {
+  padding-top: 32px;
 }
 
 .mobile-nav-list {
   display: flex;
   flex-direction: column;
   gap: 32px;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .mobile-nav-item {
@@ -121,14 +134,24 @@ a {
   margin: 0;
 }
 
-/* #endregion mobile-menu */
-
 @media screen and (min-width: 768px) {
   .mobile-menu-container {
     padding-right: 32px;
     padding-left: 32px;
   }
+
+  .mobile-nav {
+    margin-bottom: 0;
+  }
+
+  .mobile-menu-close {
+    position: absolute;
+    top: 8px;
+    right: 16px;
+  }
 }
+
+/* #endregion mobile-menu */
 
 @media screen and (min-width: 1440px) {
   .header-container {
@@ -163,8 +186,10 @@ a {
     color: #3ac04c;
   }
 
-  .header-nav .logo-link {
+  .header-nav .logo-link img {
     margin-right: 175px;
+    width: 106px;
+    height: 45px;
   }
 
   .header-nav .nav-list {
