--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,7 +3,7 @@
   <div class="container header-container">
     <nav class="header-nav">
       <a href="/index.html" class="logo-link">
-        <img src="/img/logo.svg" width="80" height="30" />
+        <img src="/img/logo.svg" width="84" height="36" />
       </a>
       <ul class="nav-list d-none">
         <li class="nav-item">
@@ -49,10 +49,11 @@
   </div>
 
   <div class="mobile-menu" data-menu>
+    <!-- <div class="mobile-header"> -->
     <div class="mobile-menu-container">
       <div class="mob-logo">
         <a href="/index.html" class="logo-link">
-          <img src="/img/logo.svg" width="80" height="30" />
+          <img src="/img/logo.svg" width="84" height="36" />
         </a>
       </div>
       <div class="mob-btn">
@@ -62,6 +63,7 @@
           </svg>
         </button>
       </div>
+      <!-- </div> -->
       <nav class="mobile-nav">
         <ul class="mobile-nav-list">
           <li class="mobile-nav-item">
