--- a/src/css/support.css
+++ b/src/css/support.css
@@ -1,6 +1,7 @@
 .support-section {
   padding: 32px 0;
 }
+
 .support-title {
   font-family: 'Comfortaa', sans-serif;
   font-weight: 700;
@@ -11,7 +12,7 @@
   margin-bottom: 24px;
 }
 .support-subtitle {
-  font-family: 'Comfortaa', sans-serif;
+  font-family: 'Fira Sans', sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 1.6;
@@ -25,9 +26,10 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 24px;
+  position: relative;
 }
 .form-label {
-  font-family: 'Comfortaa', sans-serif;
+  font-family: 'Fira Sans', sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.6;
@@ -45,12 +47,37 @@
 
   background-color: rgba(3, 10, 6, 0.05);
 }
+input:focus {
+  outline: none;
+}
+.input:not(:placeholder-shown):invalid {
+  border-color: #d64040;
+  color: #d64040;
+}
+.text-invalid {
+  position: absolute;
+  top: 68px;
+  font-weight: 400;
+  font-size: 12px;
+
+  /* line-height: 19px; */
+  line-height: 1.6;
+  color: #d64040;
+  display: none;
+}
+.input:not(:placeholder-shown):invalid + .text-invalid {
+  display: block;
+}
 .input-name {
 }
 .input-email {
 }
 .input-message {
   min-height: 180px;
+  resize: none;
+}
+.input-message:focus {
+  outline: none;
 }
 .btn {
 }
@@ -72,11 +99,26 @@
   /* line-height: 26px; */
   line-height: 1.6;
 }
+.btn-submit:hover,
+.btn-submit:focus {
+  background-color: #030a06;
+  opacity: 0.5;
+}
+.btn-submit:active {
+  background-color: #113916;
+  opacity: 0.6;
+}
+@media screen and (min-width: 768px) {
+  .btn-submit {
+    margin: 0 auto 0 0;
+    width: 249px;
+  }
+}
 
 .support-img {
   margin: 0 auto;
 
-  height: 428px;
+  min-height: 428px;
   width: 100%;
   background-size: cover;
   background-position: center;
@@ -91,7 +133,7 @@
   }
 }
 
-@media screen and (min-width: 1158px) {
+@media screen and (min-width: 1440px) {
   .support-img {
     background-image: url(../img/support/support-img-desktop-x1-min.jpg);
   }
@@ -107,9 +149,28 @@
     }
   }
 
-  @media (min-width: 1158px) {
+  @media (min-width: 1440px) {
     .support-img {
       background-image: url(../img/support/support-img-desktop-x2-min.jpg);
     }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .support-section {
+    padding: 64px 0;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .support-wrapper {
+    display: flex;
+  }
+  .support-content {
+    width: calc((100% - 24px) / 2);
+  }
+  .support-img {
+    width: calc((100% - 24px) / 2);
+    min-height: 100%;
   }
 }
