--- a/src/partials/assortment.html
+++ b/src/partials/assortment.html
@@ -1,6 +1,6 @@
 <!-- Олександр Кушпій -->
 
-<!-- #region-four -->
+<!-- #region-assortment -->
 
 <section class="assortment">
     <div class="container">
@@ -9,7 +9,7 @@
             <li class="assortment-li">
                 <div class="assortment-img">
                     <picture>
-                        <source media="(min-width: 1158px)"
+                        <source media="(min-width: 1440px)"
                             srcset="./img/assortment/01-desk-1x.jpg 1x, ./img/assortment/01-desk-2x.jpg 2x">
                         <source media="(min-width: 768px)"
                             srcset="./img/assortment/01-tab-1x.jpg 1x, ./img/assortment/01-tab-2x.jpg 2x">
@@ -28,7 +28,7 @@
             <li class="assortment-li">
                 <div class="assortment-img">
                     <picture>
-                        <source media="(min-width: 1158px)"
+                        <source media="(min-width: 1440px)"
                             srcset="./img/assortment/02-desk-1x.jpg 1x, ./img/assortment/02-desk-2x.jpg 2x">
                         <source media="(min-width: 768px)"
                             srcset="./img/assortment/02-tab-1x.jpg 1x, ./img/assortment/02-tab-2x.jpg 2x">
@@ -47,7 +47,7 @@
             <li class="assortment-li">
                 <div class="assortment-img">
                     <picture>
-                        <source media="(min-width: 1158px)"
+                        <source media="(min-width: 1440px)"
                             srcset="./img/assortment/03-desk-1x.jpg 1x, ./img/assortment/03-desk-2x.jpg 2x">
                         <source media="(min-width: 768px)"
                             srcset="./img/assortment/03-tab-1x.jpg 1x, ./img/assortment/03-tab-2x.jpg 2x">
@@ -66,7 +66,7 @@
             <li class="assortment-li">
                 <div class="assortment-img">
                     <picture>
-                        <source media="(min-width: 1158px)"
+                        <source media="(min-width: 1440px)"
                             srcset="./img/assortment/04-desk-1x.jpg 1x, ./img/assortment/04-desk-2x.jpg 2x">
                         <source media="(min-width: 768px)"
                             srcset="./img/assortment/04-tab-1x.jpg 1x, ./img/assortment/04-tab-2x.jpg 2x">
@@ -85,7 +85,7 @@
             <li class="assortment-li">
                 <div class="assortment-img">
                     <picture>
-                        <source media="(min-width: 1158px)"
+                        <source media="(min-width: 1440px)"
                             srcset="./img/assortment/05-desk-1x.jpg 1x, ./img/assortment/05-desk-2x.jpg 2x">
                         <source media="(min-width: 768px)"
                             srcset="./img/assortment/05-tab-1x.jpg 1x, ./img/assortment/05-tab-2x.jpg 2x">
@@ -104,7 +104,7 @@
             <li class="assortment-li">
                 <div class="assortment-img">
                     <picture>
-                        <source media="(min-width: 1158px)"
+                        <source media="(min-width: 1440px)"
                             srcset="./img/assortment/06-desk-1x.jpg 1x, ./img/assortment/06-desk-2x.jpg 2x">
                         <source media="(min-width: 768px)"
                             srcset="./img/assortment/06-tab-1x.jpg 1x, ./img/assortment/06-tab-2x.jpg 2x">
@@ -123,7 +123,7 @@
             <li class="assortment-li">
                 <div class="assortment-img">
                     <picture>
-                        <source media="(min-width: 1158px)"
+                        <source media="(min-width: 1440px)"
                             srcset="./img/assortment/07-desk-1x.jpg 1x, ./img/assortment/07-desk-2x.jpg 2x">
                         <source media="(min-width: 768px)"
                             srcset="./img/assortment/07-tab-1x.jpg 1x, ./img/assortment/07-tab-2x.jpg 2x">
@@ -142,7 +142,7 @@
             <li class="assortment-li">
                 <div class="assortment-img">
                     <picture>
-                        <source media="(min-width: 1158px)"
+                        <source media="(min-width: 1440px)"
                             srcset="./img/assortment/08-desk-1x.jpg 1x, ./img/assortment/08-desk-2x.jpg 2x">
                         <source media="(min-width: 768px)"
                             srcset="./img/assortment/08-tab-1x.jpg 1x, ./img/assortment/08-tab-2x.jpg 2x">
