--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -17,14 +17,10 @@
     <address class="contacts">
       <ul class="contacts-list">
         <li class="contacts-item">
-          <a class="contants-link" href="tel:+380999091122"
-            >+38 (099) 909 11 22</a
-          >
+          <a class="contants-link" href="tel:+380999091122">+38 (099) 909 11 22</a>
         </li>
         <li class="contacts-item">
-          <a class="contants-link" href="#" type="emailto:" hello@ecotote.com
-            >hello@ecotote.com</a
-          >
+          <a class="contants-link" href="#" type="emailto:" hello@ecotote.com>hello@ecotote.com</a>
         </li>
       </ul>
     </address>
@@ -36,7 +32,7 @@
     </button>
   </div>
 
-  <div class="mobile-menu is-open" data-menu>
+  <div class="mobile-menu" data-menu>
     <div class="container mobile-menu-container">
       <div class="mob-logo">
         <a href="#" class="logo-link">
@@ -75,16 +71,10 @@
       <address class="mobile-address">
         <ul class="mobile-address-list">
           <li class="mobile-address-item">
-            <a
-              href="tel:+380999091122"
-              class="mobile-address-link mobile-contact-link"
-              >+38 (099) 909 11 22</a
-            >
+            <a href="tel:+380999091122" class="mobile-address-link mobile-contact-link">+38 (099) 909 11 22</a>
           </li>
           <li class="mobile-address-item">
-            <a href="mailto:hello@ecotote.com" class="mobile-address-link"
-              >hello@ecotote.com</a
-            >
+            <a href="mailto:hello@ecotote.com" class="mobile-address-link">hello@ecotote.com</a>
           </li>
         </ul>
       </address>
